Optimized clusters with PCA

--- a/crypto_investments.ipynb
+++ b/crypto_investments.ipynb
@@ -1227,37 +1227,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a PCA model instance and set `n_components=3`.\n",
-    "# YOUR CODE HERE!"
+    "# YOUR CODE HERE!\n",
+    "pca = PCA(n_components=3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.02716415e-01, -1.09294014e+00,  5.35184395e-01],\n",
+       "       [ 7.67117769e-02, -7.04779064e-01,  1.03685543e+00],\n",
+       "       [-6.19998579e-01, -1.97690890e-02, -6.54034410e-01],\n",
+       "       [-6.64724714e-01,  2.17397355e-03, -4.85221049e-01],\n",
+       "       [ 2.88738674e-01, -2.43700872e+00,  1.79915657e+00]])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Use the PCA model with `fit_transform` to reduce to \n",
     "# three principal components.\n",
     "# YOUR CODE HERE!\n",
+    "market_pca_data = pca.fit_transform(df_marketdata_predictions)\n",
+    "\n",
     "\n",
     "# View the first five rows of the DataFrame. \n",
-    "# YOUR CODE HERE!"
+    "# YOUR CODE HERE!\n",
+    "market_pca_data[:5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.38043081, 0.33516548, 0.17629339])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Retrieve the explained variance to determine how much information \n",
     "# can be attributed to each principal component.\n",
-    "# YOUR CODE HERE!"
+    "# YOUR CODE HERE!\n",
+    "pca.explained_variance_ratio_"
    ]
   },
   {
@@ -1273,24 +1304,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8918896809358546"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pca.explained_variance_ratio_.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#Total explained variance = 0.8918896809358546"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PC1</th>\n",
+       "      <th>PC2</th>\n",
+       "      <th>PC3</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>coinid</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>bitcoin</th>\n",
+       "      <td>0.102716</td>\n",
+       "      <td>-1.092940</td>\n",
+       "      <td>0.535184</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ethereum</th>\n",
+       "      <td>0.076712</td>\n",
+       "      <td>-0.704779</td>\n",
+       "      <td>1.036855</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>tether</th>\n",
+       "      <td>-0.619999</td>\n",
+       "      <td>-0.019769</td>\n",
+       "      <td>-0.654034</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ripple</th>\n",
+       "      <td>-0.664725</td>\n",
+       "      <td>0.002174</td>\n",
+       "      <td>-0.485221</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>bitcoin-cash</th>\n",
+       "      <td>0.288739</td>\n",
+       "      <td>-2.437009</td>\n",
+       "      <td>1.799157</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   PC1       PC2       PC3\n",
+       "coinid                                    \n",
+       "bitcoin       0.102716 -1.092940  0.535184\n",
+       "ethereum      0.076712 -0.704779  1.036855\n",
+       "tether       -0.619999 -0.019769 -0.654034\n",
+       "ripple       -0.664725  0.002174 -0.485221\n",
+       "bitcoin-cash  0.288739 -2.437009  1.799157"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create a new DataFrame with the PCA data.\n",
     "# Note: The code for this step is provided for you\n",
     "\n",
     "# Creating a DataFrame with the PCA data\n",
     "# YOUR CODE HERE!\n",
+    "df_market_pca =  pd.DataFrame(market_pca_data, columns=[\"PC1\", \"PC2\", \"PC3\"])\n",
     "\n",
     "# Copy the crypto names from the original data\n",
     "# YOUR CODE HERE!\n",
+    "df_market_pca[\"coinid\"] = df_market_data.index\n",
     "\n",
     "# Set the coinid column as index\n",
     "# YOUR CODE HERE!\n",
+    "df_market_pca = df_market_pca.set_index(\"coinid\")\n",
     "\n",
     "# Display sample data\n",
-    "# YOUR CODE HERE!"
+    "# YOUR CODE HERE!\n",
+    "df_market_pca.head()"
    ]
   },
   {
